# choose-me-a-cloud-back

./: .gitignore  README.md  conftest.py  pyproject.toml
clouds/: constants.py  models.py
clouds/apis/: serializers.py  urls.py  views.py
clouds/migrations/: 0001_initial.py
clouds/tasks/: task_refresh_products.py
commons/api/: filters.py  mixins.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py  test.py
tests/clouds/: factories.py
tests/clouds/apis/: test_cloud_list.py  test_create.py  test_list.py  test_list_names.py  test_refresh_products.py
tests/users/: factories.py
tests/users/api/: test_list_cart.py
users/: admin.py  authentication.py  models.py
users/apis/: serialzers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_shoppingcart_shoppingcart_unique_user_product.py
